authentification et integration de redux, recuperation des donnees au dashoard
